# osi

./: child.cpp
lab5-7/: Makefile.txt  node.cpp  server.cpp
osi lab1/: CMakeLists.txt  child.cpp  parent.cpp
oslab1/: CMakeLists.txt  Makefile  parent.cpp
oslab2/: main.c
oslab3/: CMakeLists.txt  Makefile
oslab3/src/: child.c  parent.c
oslab4/: Makefile
oslab4/src/: dynamic.c  lib1.c  lib2.c  static.c
